fixed restaurant image stretching

--- a/react-app/src/styles/restaurantCard.css
+++ b/react-app/src/styles/restaurantCard.css
@@ -63,6 +63,7 @@
     min-width: 100%;
     border-top-left-radius: 0.4rem;
     border-top-right-radius: 0.4rem;
+    object-fit: cover;
 }
 
 .restaurant-card .card-info {
