--- a/react-app/src/styles/restaurantDetail.css
+++ b/react-app/src/styles/restaurantDetail.css
@@ -1,6 +1,7 @@
 .restHeaderImg {
     height: 460px;
-    width: 100%
+    width: 100%;
+    object-fit: cover;
 }
 
 .restProfile {
